package Sesi10.StudyKasus.Interfaces;

public interface Tunjangan {
    double hitungTunjangan();
}